--- a/package.json
+++ b/package.json
@@ -1,32 +1,61 @@
 {
-  "name": "ujk-drawing",
+  "name": "ujk_drawing",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.8",
+    "@ant-design/icons": "^4.0.5",
+    "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.19",
-    "@types/node": "^12.19.11",
+    "@types/lodash": "^4.14.138",
+    "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/styled-components": "^4.1.19",
+    "antd": "^4.1.1",
+    "axios": "^0.18.1",
+    "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
+    "history": "^5.0.0",
+    "lodash": "^4.17.19",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "styled-components": "^4.3.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
+  },
+  "resolutions": {
+    "**/@typescript-eslint/eslint-plugin": "^4.1.1",
+    "**/@typescript-eslint/parser": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom --verbose=false",
+    "test:ci": "cross-env CI=true react-scripts test --ci --reporters=default --detectOpenHandles --coverage --runInBand --forceExit",
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext=jsx,ts,tsx src",
+    "lint:fix": "eslint --ext=jsx,ts,tsx src --fix",
+    "server": "node-env-run server --exec nodemon | pino-colada",
+    "dev": "run-p server start"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --ext=jsx,ts,tsx src"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && lint-staged",
+      "pre-push": "cross-env CI=true react-scripts test --env=jsdom"
+    }
   },
   "browserslist": {
     "production": [
@@ -39,5 +68,33 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^10.0.4",
+    "@types/history": "^4.7.8",
+    "@types/react-router-dom": "^5.1.6",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
+    "body-parser": "^1.19.0",
+    "cross-env": "^5.2.1",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "express": "^4.17.1",
+    "express-pino-logger": "^5.0.0",
+    "husky": "^1.3.1",
+    "jest-teamcity-reporter": "^0.9.0",
+    "lint-staged": "^8.2.1",
+    "node-env-run": "^4.0.2",
+    "nodemon": "^2.0.6",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^2.1.0",
+    "prettier": "1.19.1",
+    "pretty-quick": "^1.11.1"
   }
 }
