--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "history": "^5.0.0",
     "lodash": "^4.17.19",
     "react": "^17.0.1",
+    "react-canvas-draw": "^1.1.1",
     "react-dom": "^17.0.1",
+    "react-input-color": "^4.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -72,6 +74,7 @@
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
     "@types/history": "^4.7.8",
+    "@types/react-canvas-draw": "^1.1.0",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
