--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "@types/styled-components": "^4.1.19",
     "antd": "^4.1.1",
     "axios": "^0.18.1",
+    "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
     "history": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
+    "mongoose": "^5.9.15",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "react": "^17.0.1",
     "react-canvas-draw": "^1.1.1",
     "react-dom": "^17.0.1",
