--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 SKIP_PREFLIGHT_CHECK=true
 NODE_PATH=./
 PORT=8080
+REACT_APP_API=http://localhost:8080/
+
+REACT_APP_ACCESS_KEY="accessToken"
+REACT_APP_REFRESH_KEY="refreshToken"
+REACT_APP_COOKIE_DOMAIN=localhost
