--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "antd": "^4.1.1",
     "axios": "^0.18.1",
     "bcrypt": "^4.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
     "history": "^5.0.0",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.15",
@@ -35,6 +37,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reactjs-localstorage": "^1.0.1",
     "styled-components": "^4.3.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
@@ -80,6 +83,7 @@
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
     "@types/history": "^4.7.8",
+    "@types/js-cookie": "^2.2.6",
     "@types/react-canvas-draw": "^1.1.0",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
