--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "include": ["./src/"],
-  "exclude": ["./server/"]
+  "exclude": ["./server/", "node_modules", "typing"]
 }
