--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
+    "express-jwt": "^6.0.0",
     "history": "^5.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
